export interface ITemporada {
  ajustar(tarifaBase: number): number
  getNombre(): string
}