import Cliente from "./cliente";
import { ITemporada } from "./Temporada/iTemporada";
import Vehiculo from "../src/Vehiculo/vehiculo";

export default class Reserva {

    private idReserva: number;
    private cliente: Cliente;
    private vehiculo: Vehiculo;
    private fechaDeInicio: Date
    private fechaDeFin: Date
    private kilometrosRecorridos: number;
    private temporada: ITemporada;
    private finalizada: boolean;

    constructor(idReserva: number, cliente: Cliente, vehiculo: Vehiculo, fechaInicio: Date, fechaFin: Date, temporada: ITemporada) {
        this.idReserva = idReserva;
        this.cliente = cliente;
        this.vehiculo = vehiculo;
        this.fechaDeInicio = fechaInicio;
        this.fechaDeFin = fechaFin;
        this.kilometrosRecorridos = 0;
        this.temporada = temporada;
        this.finalizada = false;
    }

    // GETTERS
    public getIdReserva(): number {
        return this.idReserva;        
    }

    public getCliente(): Cliente {
        return this.cliente;
    }

    public getVehiculo(): Vehiculo {
        return this.vehiculo;
    }

    public getFechaDeInicio(): Date{
        return this.fechaDeInicio;
    }

    public getFechaDeFin(): Date {
        return this.fechaDeFin;
    }
    
    public getKilometrosRecorridos(): number {
        return this.kilometrosRecorridos;
    }

    public getEstrategiaTemporada(): ITemporada {
        return this.temporada;
    }
    
    public estaFinalizada(): boolean {
        return this.finalizada;
    }
    
    /**
     * Calcula la cantidad de días de la reserva.
     * @returns devuelve cantidad de días.
    */
    public calcularDias(): number {
       const milisegundosPorDia = 1000 * 60 * 60 * 24;
       const diferenciaMiliSegundos = this.fechaDeFin.getTime()- this.fechaDeInicio.getTime();
       return Math.ceil(diferenciaMiliSegundos / milisegundosPorDia);
    }
    
    /**
     * Registra los kilometros recorridos al finalizar el alquiler.
     * @param km => kilometros recorridos
     */
    public setKilometrosRecorridos(km: number): void {
        if (km <= 0) {
            throw new Error("Los kilometros recorridos deben ser mayores a cero");
        }
        if (this.finalizada) {
            throw new Error("No se puede modificar el kilometraje de una reserva finalizada");
        }
        this.kilometrosRecorridos = km;
    }
    
    /**
     * Calcula el costo total de la reserva.
     * @returns devuelve el costo total de la reserva
     */
    public calcularCostoTotal(): number {
        if (this.kilometrosRecorridos === 0) {
            throw new Error("Debe registrar el kilometraje antes de calcular el costo");
        }
        const dias = this.calcularDias();
        const kmRecorridos = this.getKilometrosRecorridos();

        return this.vehiculo.calcularTarifaConTemporada(dias, kmRecorridos, this.temporada);
    }
    
    /**
     * Finaliza la reserva y el vehiculo recibe los kilometros recorridos en el método devolver y cambia el estado.
    */
    public finalizarReserva(): void {
        if (this.finalizada) {
            throw new Error("La reserva está finalizada.");
        }
        if (this.kilometrosRecorridos === 0) {
            throw new Error("Debe registrar el kilometraje antes de finalizar la reserva");
        }
        
        this.vehiculo.devolver(this.kilometrosRecorridos);
        this.finalizada = true;
    }
    
}